[package]
name = "qstaking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qstaking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "1.9.13"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
mpl-token-metadata = { version = "1.4.3", features = [ "no-entrypoint" ]}
#bitflags = "1.3.2"
#metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }

